(library
 (name readline)
 (libraries ctypes.foreign.threaded)
 (c_flags
  (:include c_flags.sexp))
 (c_library_flags
  (:include c_library_flags.sexp)))

(rule
 (targets c_flags.sexp c_library_flags.sexp)
 (deps
  (:discover config/discover.exe))
 (action
  (setenv
   DUNE_CONFIGURATOR
   %{ocamlc}
   (run %{discover}))))
