(library
 (name tdlib)
 (libraries ctypes.foreign.threaded core async)
 (preprocess
  (pps ppx_let ppx_fields_conv ppx_yojson_conv))
 (c_flags
  (:include c_flags.sexp))
 (c_library_flags
  (:include c_library_flags.sexp)))

(rule
 (targets c_flags.sexp c_library_flags.sexp)
 (deps
  (:discover config/discover.exe))
 (action
  (setenv
   DUNE_CONFIGURATOR
   %{ocamlc}
   (run %{discover}))))
